# openenade

./: .gitignore  LICENSE  README.md  wrangler.jsonc
.github/workflows/: ci.yml
etl/: README.md  pyproject.toml
etl/src/: export.py  ingest.py  normalize.py  pipeline.py  rank.py  transform.py
etl/tests/: conftest.py  test_export.py  test_ingest.py  test_normalize.py  test_pipeline.py  test_rank.py  test_transform.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  wrangler.jsonc
web/public/: robots.txt
web/scripts/: generate-og-images.ts  generate-sitemap.ts  generate-worker-courses.ts
web/src/: app.css  i18n.ts  main.tsx  types.ts
web/src/components/: compare-cards.tsx  error-boundary.tsx  evolution-chart.tsx  faixa-badge.tsx  faixa-proximity.tsx  filter-bar.tsx  footer.tsx  info-tip.tsx  metric-bars.tsx  nav-bar.tsx  position-context.tsx  profile-analysis.tsx  ranking-table.tsx  rede-badge.tsx  sample-size-callout.tsx  score-bar.tsx  seo-head.tsx  stat-card.tsx  trap-callout.tsx
web/src/data/: administracao-2022.json  administracao-publica-2022.json  agronomia-2019.json  agronomia-2023.json  arquitetura-e-urbanismo-2019.json  arquitetura-e-urbanismo-2023.json  artes-visuais-2021.json  biomedicina-2019.json  biomedicina-2023.json  ciencia-da-computacao-2021.json  ciencias-biologicas-2021.json  ciencias-contabeis-2022.json  ciencias-economicas-2022.json  ciencias-sociais-2021.json  courses.json  design-2021.json  direito-2022.json  (+89 more)
worker/: README.md
worker/src/: bot-html.ts  courses.ts  index.ts
(+10 files in other folders)
