[project]
name = "openenade-etl"
version = "0.1.0"
description = "ETL pipeline for ENADE data"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "openpyxl>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
